[gd_scene load_steps=26 format=2]

[ext_resource path="res://sprites/doctor_2/Doc_Jump.png" type="Texture" id=1]
[ext_resource path="res://Character/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/doctor_2/Doc_Idle_Aim.png" type="Texture" id=3]
[ext_resource path="res://ui/life_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/doctor_2/Dead_Doc_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/doctor_2/Dead_Doc_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/doctor_2/Dead_Doc_3.png" type="Texture" id=7]
[ext_resource path="res://sounds/sound_on_playing.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/pause.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/game_over.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/doctor_2/Doc_Idle.png" type="Texture" id=12]
[ext_resource path="res://sprites/doctor_2/Doc_1.png" type="Texture" id=13]
[ext_resource path="res://sprites/doctor_2/Doc_2.png" type="Texture" id=14]
[ext_resource path="res://sprites/doctor_2/Doc_3.png" type="Texture" id=17]
[ext_resource path="res://sprites/doctor_2/Doc_4.png" type="Texture" id=18]
[ext_resource path="res://sprites/doctor_2/Doc_5.png" type="Texture" id=19]
[ext_resource path="res://sprites/doctor_2/Doc_10.png" type="Texture" id=22]
[ext_resource path="res://sprites/doctor_2/Doc_6.png" type="Texture" id=23]
[ext_resource path="res://sprites/doctor_2/Doc_7.png" type="Texture" id=24]
[ext_resource path="res://ui/playing_ui.tscn" type="PackedScene" id=33]
[ext_resource path="res://sprites/doctor_2/Doc_8.png" type="Texture" id=39]
[ext_resource path="res://sprites/doctor_2/Doc_9.png" type="Texture" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "doctor_idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "doctor_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": false,
"name": "doctor_dead",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "doctor_idle_aim",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "doctor_fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 22 ) ],
"loop": true,
"name": "doctor_run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 122.033, 522.355 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 128, 32 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
speed_scale = 2.0

[node name="life_box" type="CollisionShape2D" parent="."]
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 2 )

[node name="death_box" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 100, -50 )

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 12184
limit_bottom = 1125
smoothing_enabled = true
smoothing_speed = 20.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" parent="CanvasLayer" instance=ExtResource( 33 )]
position = Vector2( 490, 916 )

[node name="life_bar" parent="." instance=ExtResource( 4 )]

[node name="sound_on_playing" parent="." instance=ExtResource( 8 )]

[node name="pause" parent="." instance=ExtResource( 9 )]

[node name="game_over" parent="." instance=ExtResource( 10 )]
